# dhbw-dualis-discord

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  dualis_results.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
src/: index.ts  main.rs  results.rs
test_data/: result_details_multiple.html  result_details_single.html  result_details_single_split.html  results.html  semester_details.html
