[package]
name = "dhbw_dualis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.10", features = ["blocking", "cookies", "json"] }
scraper = "0.12.0"
regex = "1.5.5"
serde = "1.0.136"
serde_json = "1.0.79"
