[package]
name = "dhbw_dualis_discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.11", features = ["blocking", "cookies", "json"] }
scraper = "0.13.0"
regex = "1.6.0"
serde = "1.0.144"
serde_json = "1.0.85"
